--- a/public_html/remuneraciones.html
+++ b/public_html/remuneraciones.html
@@ -90,18 +90,19 @@
 
                                     
                                     <h3>Informes SICCA</h3>
+                                    <embed  src="pdf/SICCA/122016.pdf" width="1000" height="800">
+                                    <embed  src="pdf/SICCA/112016.pdf" width="1000" height="800">
+                                    <embed  src="pdf/SICCA/102016.pdf" width="1000" height="800">
+                                    <embed  src="pdf/SICCA/092016.pdf" width="1000" height="800">
+                                    <embed  src="pdf/SICCA/082016.pdf" width="1000" height="800">
+                                    <embed  src="pdf/SICCA/072016.pdf" width="1000" height="800">
                                     <embed  src="pdf/SICCA/062016.pdf" width="1000" height="800">
+                                    <embed  src="pdf/SICCA/052016.pdf" width="1000" height="800">
+                                    <embed  src="pdf/SICCA/042016.pdf" width="1000" height="800">
+                                    <embed  src="pdf/SICCA/032016.pdf" width="1000" height="800">
+                                    <embed  src="pdf/SICCA/022016.pdf" width="1000" height="800">
+                                    <embed  src="pdf/SICCA/012016.pdf" width="1000" height="800">
                                    
-                                    <h3>Planillas de Pago</h3>
-                                    <embed  src="pdf/remuneraciones/2016/julio_2016.pdf" width="1000" height="800">
-                                    <embed  src="pdf/remuneraciones/2016/junio_2016.pdf" width="1000" height="800">
-                                    <embed  src="pdf/remuneraciones/2016/mayo_2016.pdf" width="1000" height="800">
-                                    <embed  src="pdf/remuneraciones/2016/abril_2016.pdf" width="1000" height="800">
-                                    <embed  src="pdf/remuneraciones/2016/marzo_2016.pdf" width="1000" height="800">
-                                    <embed  src="pdf/remuneraciones/2016/febrero_2016.pdf" width="1000" height="800">
-                                    <embed  src="pdf/remuneraciones/2016/enero_2016.pdf" width="1000" height="800">
-                                    <!--<embed  src="assets/2016/fonacide/informe_de_gestion/informe de gestion 2.pdf" width="1000" height="800">-->
-
 
                                 </div>
                             </div>
