--- a/public_html/index.html
+++ b/public_html/index.html
@@ -77,9 +77,6 @@
                                                     <li>
                                                         <a href="fonacide_informe_de_gestion.html">2016</a>
                                                     </li>
-                                                    <!--                                                    <li>
-                                                                                                            <a href="fonacide_primer_semestre.html">Informe Primer Semestre</a>
-                                                                                                        </li>-->
                                                 </ul>
                                             </li>
                                             <li class="parent">
@@ -87,8 +84,7 @@
                                                 <ul>
                                                     <li>
                                                         <a href="remuneraciones.html">2016</a>
-                                                        <!--<a href="remuneraciones.html">2015</a>-->
-                                                        <!--<a href="remuneraciones_2014.html">2014</a>-->
+                                                        <a href="remuneraciones_2017.html">2017</a>
                                                     </li>
                                                 </ul>
                                             </li>
@@ -97,8 +93,6 @@
                                                 <ul>
                                                     <li>
                                                         <a href="informe_de_gestion.html">2016</a>
-                                                        <!--<a href="remuneraciones.html">2015</a>-->
-                                                        <!--<a href="remuneraciones_2014.html">2014</a>-->
                                                     </li>
                                                 </ul>
                                             </li>
