--- a/public_html/index.html
+++ b/public_html/index.html
@@ -75,7 +75,7 @@
                                                 <span>FONACIDE</span>
                                                 <ul>
                                                     <li>
-                                                        <a href="fonacide_informe_de_gestion.html">2016</a>
+                                                        <a href="fonacide_informe_de_gestion.html">2016 / 2017</a>
                                                     </li>
                                                 </ul>
                                             </li>
@@ -92,7 +92,7 @@
                                                 <span>Informe de Gestión</span>
                                                 <ul>
                                                     <li>
-                                                        <a href="informe_de_gestion.html">2016</a>
+                                                        <a href="informe_de_gestion.html">2016 / 2017</a>
                                                     </li>
                                                 </ul>
                                             </li>
@@ -133,16 +133,8 @@
                                                 <a href="manual_funciones.html">Manual de Funciones</a>
                                                 <!--<a href="pdf/organigrama.pdf">Estructura Orgánica</a>-->
                                             </li> 
-                                            <li class="parent">
-                                                <span>Ordenanzas</span>
-                                                <ul>
-                                                    <li>
-                                                        <a href="Ordenanza_002.html">2/14 Comisiones vecinales</a>
-                                                        <a href="pdf/ordenanzas/082016.pdf">08/2016</a>
-                                                        <a href="pdf/ordenanzas/032016.pdf">03/2016</a>
-                                                        <!--<a href="remuneraciones_2014.html">2014</a>-->
-                                                    </li>
-                                                </ul>
+                                            <li>
+                                                <a href="Ordenanzas.html">Ordenanzas y Resoluciones</a>
                                             </li>
                                             <li >
                                                 <a href="">Vacancias</a>
