--- a/public_html/informe_de_gestion.html
+++ b/public_html/informe_de_gestion.html
@@ -87,7 +87,39 @@
                             <!-- Paragraph Examples -->
                             <div class="row">
                                 <div class="col-md-12">
+                                    
+                                    <h3>B1-08 y Ejecución 2016</h3>
+                                    <embed  src="pdf/b1-08-2016.pdf" width="1000" height="800">
+                                    <br>
+                                    
+                                    <h3>Tercer trimestre 2016</h3>
                                     <embed  src="pdf/informe_de_gestion/tercer_trimestre_2016.pdf" width="1000" height="800">
+                                    <h3>B1-08 y Ejecución 2016</h3>
+                                    <embed  src="pdf/b1-08-2016.pdf" width="1000" height="800">
+                                    <br>
+                                    <br>
+                                    <h3>Nota de Presentacion de informe FONACIDE</h3>
+                                    <embed  src="pdf/nota_fonacide_2016.pdf" width="1000" height="800">
+                                    <br>
+                                    <br>
+                                    <h3>Informe de Gestión</h3>
+                                    <embed  src="pdf/fonacide/rendicion_de_cuentas/informe_de_gestion2016.pdf" width="1000" height="800">
+
+                                    <h3>2015</h3>
+                                    <embed  src="pdf/fonacide/primer_semestre/b0108.pdf" width="1000" height="800">
+                                    <br>
+                                    <br>
+                                    <h3>Nota de Presentacion de informe FONACIDE</h3>
+                                    <embed  src="pdf/fonacide/primer_semestre/nota_ejecucion.pdf" width="1000" height="800">
+                                    <br>
+                                    <br>
+                                    <h3>Informe de Gestión</h3>
+                                    <embed  src="pdf/fonacide/primer_semestre/ejecucion_primer_semestre3.pdf" width="1000" height="800">
+                                    <!--<embed  src="assets/2016/fonacide/informe_semestral/informe semestral fonacide.pdf" width="1000" height="800">-->
+                                    <!--<embed  src="assets/2016/fonacide/informe_de_gestion/mesa_de_entrada_informe_de_getsion.pdf" width="1000" height="800">-->
+                                    <!--<embed  src="assets/2016/fonacide/informe_de_gestion/informe de gestion 2.pdf" width="1000" height="800">-->
+                                    <embed  src="pdf/fonacide/rendicion_de_cuentas/rendicion_de_cuentas.pdf" width="1000" height="800">
+
                                 </div>
                             </div>
                         </div>
