--- a/public_html/remuneraciones.html
+++ b/public_html/remuneraciones.html
@@ -95,8 +95,8 @@
                                     <!--<embed  src="pdf/SICCA/102017.pdf" width="1000" height="800">-->
                                     <!--<embed  src="pdf/SICCA/092017.pdf" width="1000" height="800">-->
                                     <!--<embed  src="pdf/SICCA/082017.pdf" width="1000" height="800">-->
-                                    <!--<embed  src="pdf/SICCA/072017.pdf" width="1000" height="800">-->
-                                    <!--<embed  src="pdf/SICCA/062017.pdf" width="1000" height="800">-->
+                                    <embed  src="pdf/SICCA/072017.pdf" width="1000" height="800">
+                                    <embed  src="pdf/SICCA/062017.pdf" width="1000" height="800">
                                     <embed  src="pdf/SICCA/052017.pdf" width="1000" height="800">
                                     <embed  src="pdf/SICCA/042017.pdf" width="1000" height="800">
                                     <embed  src="pdf/SICCA/032017.pdf" width="1000" height="800">
