--- a/public_html/informe_de_gestion.html
+++ b/public_html/informe_de_gestion.html
@@ -87,11 +87,24 @@
                             <!-- Paragraph Examples -->
                             <div class="row">
                                 <div class="col-md-12">
+
+
+
+                                    <!------------------------------------------------->
+                                    <!------------------------------------------------->
+                                    <!------------------------------------------------->
+                                    <h3>Gestion 3er TRIMESTRE</h3>
+                                    <embed  src="pdf/AnexoB-01-08-FONACIDE3Trimestre.pdf" width="1000" height="800">
                                     
+                                    <h3>Gestion 2do CUATRIMESTRE</h3>
+                                    <embed  src="pdf/1ercuatrimestrefomacide2017.pdf" width="1000" height="800">
+                                    Gestion 1er CUATRIMESTRE 
+                                    <embed  src="pdf/fonacide1ercuatrimestre.pdf" width="1000" height="800">
+
                                     <h3>B1-08 y Ejecución 2016</h3>
                                     <embed  src="pdf/b1-08-2016.pdf" width="1000" height="800">
                                     <br>
-                                    
+
                                     <h3>Tercer trimestre 2016</h3>
                                     <embed  src="pdf/informe_de_gestion/tercer_trimestre_2016.pdf" width="1000" height="800">
                                     <h3>B1-08 y Ejecución 2016</h3>
